--- a/shopping-layout/style.css
+++ b/shopping-layout/style.css
@@ -1,10 +1,11 @@
 html {
   --site-background: #f5f5f5;
   --button-color: #485fb9;
-  --font-color: #757575;
+  --font-color: #7e7e7e;
   background-color: var(--site-background);
   font-family: "Quicksand", sans-serif;
-  font-size: 16px;
+  font-size: 15px;
+  text-shadow: 0px 0px 2px rgba(112, 112, 112, 0.068);
 }
 
 main {
@@ -17,6 +18,7 @@ main {
   justify-content: center;
   gap: 2rem;
   flex-wrap: wrap;
+  margin-top: 3rem;
 }
 
 .shoe {
@@ -30,7 +32,9 @@ main {
   border: 0px solid transparent;
   border-radius: 25px;
   height: max-content;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.089);
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.068);
+  background-size: 100% 21rem;
+  background-repeat: no-repeat;
 }
 
 .shoe1 {
@@ -40,9 +44,6 @@ main {
       rgb(255, 255, 255) 100%
     ),
     url("./images/shoe-blue.avif");
-
-  background-size: 100% 21rem;
-  background-repeat: no-repeat;
 }
 
 .shoe2 {
@@ -52,11 +53,16 @@ main {
       rgb(255, 255, 255) 100%
     ),
     url("./images/shoe-white.avif");
-
-  background-size: 100% 21rem;
-  background-repeat: no-repeat;
 }
 
+.shoe3 {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0) 50%,
+      rgb(255, 255, 255) 100%
+    ),
+    url("./images/shoe-greenish.avif");
+}
 .picture {
   height: 21rem;
   position: relative;
@@ -70,7 +76,7 @@ main {
   border-radius: 0.3rem;
   width: max-content;
   top: 1rem;
-  right: -14.5rem;
+  right: -14.8rem;
 }
 .alert-text {
   font-weight: 900;
@@ -81,9 +87,9 @@ main {
 }
 .photographer-info {
   position: absolute;
-  left: -15rem;
+  left: -15.1rem;
   bottom: 1.5rem;
-  color: #616161;
+  color: #616161d7;
   font-size: 0.8rem;
   width: max-content;
 }
@@ -96,29 +102,30 @@ main {
 }
 
 .shoe-name {
-  font-size: 1.5rem;
-  font-weight: 600;
+  font-size: 1.55rem;
+  font-weight: 900;
   color: black;
 }
 
 .shoe-description {
-  font-size: 1rem;
+  font-size: 1.05rem;
   line-height: 1.6;
-  font-weight: 500;
+  font-weight: 550;
 }
 
 .price-and-buy-wrapper {
   background-color: var(--button-color);
-  margin: 1.3rem;
-  padding: 1rem;
+  margin: 2.2rem 1.3rem 1.3rem 1.3rem;
+  padding: 1.3rem 1rem 1rem 1rem;
   width: 85%;
   background-color: var(--site-background);
   border: 0 solid transparent;
-  border-radius: 15px;
+  border-radius: 17px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+  font-weight: 600;
 }
 
 .price {
@@ -126,30 +133,31 @@ main {
   padding: 1rem;
   width: 90%;
   border: 0 solid transparent;
-  border-radius: 10px;
+  border-radius: 7px;
   display: flex;
+  font-size: 1.1rem;
 }
 
 .price-text {
-  font-size: 1.2rem;
+  font-size: 1.37rem;
   font-weight: 900;
   margin: 0 auto 0;
 }
 
 .size-quant {
   display: flex;
-  gap: 7rem;
+  gap: 6rem;
   width: 98%;
   padding: 0;
   margin: 0;
   color: var(--font-color);
-  font-size: 1.1rem;
+  font-size: 1.15rem;
 }
 
 .size-wrapper,
 .quant-wrapper {
   display: flex;
-  gap: 0.9rem;
+  gap: 0.95rem;
 }
 
 .quant-drop,
@@ -177,19 +185,46 @@ main {
   appearance: none;
   height: 1.8rem;
   width: 1.8rem;
+  transition-duration: 100ms;
+  border-radius: 90%;
+  box-shadow: 0 0 1px 2px rgba(128, 128, 128, 0.144);
+}
+.s1-color1 {
+  background: #1f55af;
+}
+.s1-color2 {
+  background: #da4841;
+}
+
+.s1-color3 {
+  background: black;
+}
+
+.s2-color1 {
+  background: linear-gradient(90deg, rgb(152, 151, 55) 50%, rgb(0, 0, 0) 50%);
+}
+.s2-color2 {
+  background: linear-gradient(90deg, rgb(87, 139, 216) 50%, rgb(0, 0, 0) 50%);
+}
+.s2-color3 {
+  background: linear-gradient(90deg, rgb(211, 101, 141) 50%, rgb(0, 0, 0) 50%);
+}
+
+.s3-color1 {
   background: linear-gradient(
     90deg,
-    rgb(43, 99, 219) 50%,
-    rgb(223, 116, 46) 50%
+    rgb(206, 51, 41) 50%,
+    rgb(255, 255, 255) 50%
   );
-  border-radius: 90%;
-  color: red;
+}
+.s3-color2 {
+  background: linear-gradient(90deg, rgb(2, 6, 9) 50%, rgb(255, 255, 255) 50%);
 }
 
 .color-radial:hover,
 .color-radial:active,
 .color-radial:focus {
-  box-shadow: 0 0 7px 2px rgb(78, 78, 78);
+  box-shadow: 0 0 7px 2px rgba(7, 10, 36, 0.486);
 }
 
 .add-to-cart {
@@ -198,10 +233,23 @@ main {
   color: var(--site-background);
   font-weight: 600;
   font-size: 1.2rem;
-  width: 98%;
+  width: 97%;
   border: 0 solid transparent;
-  border-radius: 5px;
-  margin-top: 1rem;
+  border-radius: 7px;
+  margin-top: 1.8rem;
   margin-bottom: 0.5rem;
-  height: 3.2rem;
+  height: 3.5rem;
+  text-shadow: none;
+  transition-duration: 100ms;
+}
+
+.add-to-cart:hover {
+  box-shadow: 0 0 7px 2px rgba(0, 0, 0, 0.322);
+  color: rgb(255, 255, 255);
+  background-color: rgb(52, 78, 180);
+}
+.add-to-cart:active {
+  box-shadow: 0 0 7px 2px rgba(13, 13, 53, 0.534);
+  color: rgb(255, 255, 255);
+  background-color: rgb(56, 89, 221);
 }
