--- a/shopping-layout/style.css
+++ b/shopping-layout/style.css
@@ -15,8 +15,8 @@ main {
 .content-wrapper {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  gap: 2rem;
+  justify-content: space-evenly;
+  gap: 0.5rem;
   flex-wrap: wrap;
   margin-top: 3rem;
 }
@@ -32,7 +32,7 @@ main {
   border: 0px solid transparent;
   border-radius: 25px;
   height: max-content;
-  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.068);
+  box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.068);
   background-size: 100% 21rem;
   background-repeat: no-repeat;
 }
@@ -77,7 +77,13 @@ main {
   width: max-content;
   top: 1rem;
   right: -14.8rem;
+  transition-duration: 200ms;
 }
+
+.alert-badge:hover {
+  box-shadow: 0 0 8px 2px rgba(255, 255, 255, 0.548);
+}
+
 .alert-text {
   font-weight: 900;
   display: inline-block;
@@ -85,6 +91,7 @@ main {
   font-size: 0.9rem;
   letter-spacing: 0.06rem;
 }
+
 .photographer-info {
   position: absolute;
   left: -15.1rem;
