--- a/hover-cursor/style.css
+++ b/hover-cursor/style.css
@@ -1,5 +1,5 @@
 html {
-  background-color: rgb(228, 228, 228);
+  background-color: hsl(0, 0%, 97%);
 }
 .main-grid {
   height: 900px;
@@ -26,11 +26,11 @@ div {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   position: relative;
-  background: radial-gradient(rgb(44, 97, 141) 0%, rgb(36, 78, 117) 60%);
+  background: radial-gradient(hsl(207, 52%, 36%) 0%, hsl(207, 52%, 30%) 60%);
   transition: 500ms ease;
   height: 60px;
   width: 60px;
-  border: 5px solid rgb(36, 78, 117);
+  border: 5px solid hsl(207, 52%, 30%);
   border-radius: 90%;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.514);
 }
@@ -63,8 +63,9 @@ div {
 .bi {
   width: auto;
   height: auto;
-  color: rgb(240, 240, 240);
+  color: hsl(62, 88%, 66%);
   box-shadow: 1px 1px 5px rgba(73, 73, 73, 0.425);
-  background-color: rgb(46, 142, 156);
-  border-radius: 5px;
+  background-color: hsl(207, 60%, 66%);
+  border: 5px solid hsl(207, 60%, 65.5%);
+  border-radius: 10px;
 }
