--- a/shopping-layout/style.css
+++ b/shopping-layout/style.css
@@ -1,8 +1,5 @@
 html {
-  --site-background: #f5f5f5;
-  --button-color: #485fb9;
-  --font-color: #7e7e7e;
-  background-color: var(--site-background);
+  background-color: #f5f5f5;
   font-family: "Quicksand", sans-serif;
   font-size: 15px;
   text-shadow: 0px 0px 2px rgba(112, 112, 112, 0.068);
@@ -103,7 +100,7 @@ main {
 
 .article-description-wrapper {
   background-color: rgb(255, 255, 255);
-  color: var(--font-color);
+  color: #7e7e7e;
   margin: 0 1.3rem 0 1.3rem;
   height: 11.7rem;
 }
@@ -121,11 +118,11 @@ main {
 }
 
 .price-and-buy-wrapper {
-  background-color: var(--button-color);
+  background-color: #485fb9;
   margin: 2.2rem 1.3rem 1.3rem 1.3rem;
   padding: 1.3rem 1rem 1rem 1rem;
   width: 85%;
-  background-color: var(--site-background);
+  background-color: #f5f5f5;
   border: 0 solid transparent;
   border-radius: 17px;
   display: flex;
@@ -157,7 +154,7 @@ main {
   width: 98%;
   padding: 0;
   margin: 0;
-  color: var(--font-color);
+  color: #7e7e7e;
   font-size: 1.15rem;
 }
 
@@ -178,7 +175,7 @@ main {
   flex-direction: row;
   width: 98%;
   font-size: 1.1rem;
-  color: var(--font-color);
+  color: #7e7e7e;
   gap: 0.7rem;
   align-items: center;
   margin-top: 0.5rem;
@@ -235,9 +232,9 @@ main {
 }
 
 .add-to-cart {
-  background-color: var(--button-color);
+  background-color: #485fb9;
   border: none;
-  color: var(--site-background);
+  color: #f5f5f5;
   font-weight: 600;
   font-size: 1.2rem;
   width: 97%;
