--- a/social-posting-design/style.css
+++ b/social-posting-design/style.css
@@ -49,9 +49,8 @@ html {
   color: var(--clr-posttime);
 }
 .options-icon {
-  position: absolute;
-  right: 0.8rem;
-  top: 0rem;
+  margin-left: auto;
+  margin-right: 0.8rem;
   font-size: 1.5rem;
 }
 .dots {
@@ -64,6 +63,7 @@ html {
   line-height: 1.2;
   margin-bottom: 1rem;
 }
+
 .interaction-buttons {
   border-top: 0.125rem solid var(--clr-divider);
   padding-top: 2rem;
