--- a/shopping-layout/style.css
+++ b/shopping-layout/style.css
@@ -272,18 +272,23 @@ main {
 
 @media screen and (max-width: 992px) {
   html {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  html {
     font-size: 13px;
   }
 }
-
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 500px) {
   html {
-    font-size: 10px;
+    font-size: 12px;
   }
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 400px) {
   html {
-    font-size: 8px;
+    font-size: 11px;
   }
 }
